--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,24 @@
-.env
+# Node.js dependencies
+src/backend/node_modules
+src/frontend/node_modules
 node_modules/
+src/backend/node_modules
+
+# Build directories
+/build
+/dist
+
+# Config files
+.env
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS-specific
+.DS_Store
+Thumbs.db
+
+# IDEs
+.vscode/
