--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "concurrently": "^9.1.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "react-router-dom": "^6.28.0"
   }
 }
