--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.7",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-app-rewired": "^2.2.1",
