--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -11,6 +11,7 @@
     "crypto-browserify": "^3.12.1",
     "eslint-plugin-react-hooks": "^5.0.0",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.3.1",
